boreal/tests/assets/invalid_files/parsing/str_to_oct_int.yar
// [error: error converting octal notation to integer: number too large to fit in target type]
rule a {
    condition:
        0o012345670123456701234567
}
